# scsir

./: Cargo.toml  README.md
examples/: Cargo.toml  ata_security_erase.rs  mode_sense.rs  read_bytes.rs  read_lbas.rs  unmap.rs  write_lbas.rs
scsir/: Cargo.toml
scsir/src/: data_wrapper.rs  error.rs  lib.rs  result_data.rs  scsi.rs
scsir/src/command/: background_control.rs  change_definition.rs  close_zone.rs  finish_zone.rs  format_unit.rs  get_lba_status.rs  get_stream_status.rs  inquiry.rs  log_select.rs  log_sense.rs  mod.rs  mode_select.rs  mode_sense.rs  open_zone.rs  persistent_reserve_in.rs  persistent_reserve_out.rs  read.rs  read_buffer.rs  read_capacity.rs  read_defect_data.rs  read_long.rs  reassign_blocks.rs  receive_diagnostic_results.rs  report_identifying_information.rs  report_luns.rs  report_supported_operation_codes.rs  report_supported_task_management_functions.rs  report_timestamp.rs  report_zones.rs  request_sense.rs  reset_write_pointer.rs  rezero_unit.rs  sanitize.rs  security_protocol_in.rs  security_protocol_out.rs  seek.rs  send_diagnostic.rs  sense.rs  set_identifying_information.rs  set_timestamp.rs  (+13 more)
scsir/src/command/ata/: flush_cache.rs  identify.rs  mod.rs  raw.rs  security.rs  smart.rs
scsir/src/command/shortcut/: mod.rs
scsir/src/command/shortcut/inquiry/: ascii_information.rs  block_device_characteristics.rs  block_device_characteristics_extension.rs  block_limits.rs  mod.rs  (+13 more)
scsir/src/os/: windows.rs
scsir/src/os/linux/: access_flag.rs  auxiliary_info.rs  driver_status.rs  mod.rs  result_data_ext.rs  sg_io_header.rs
(+54 files in other folders)
